--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,8 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    Symfony\Component\Security\Http\Authenticator\FormLoginAuthenticator:
+        alias: 'security.authenticator.form_login.main'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
