--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,6 +27,9 @@ security:
                 login_path: app_login
                 check_path: app_login
                 default_target_path: app_home
+                always_use_default_target_path: false
+                target_path_parameter: _target_path
+                use_referer: true
             logout:
                 path: app_logout
                 target: app_home
@@ -34,8 +37,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
     security:
