--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,7 +26,7 @@ security:
             form_login:
                 login_path: app_login
                 check_path: app_login
-                default_target_path: app_home
+                default_target_path: app_redirect
                 always_use_default_target_path: false
                 target_path_parameter: _target_path
                 use_referer: true
